--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url("https://fontsapi.zeoseven.com/481/main/result.css");
+
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "TsangerShuYuanT W03";
+    font-weight: normal;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
