--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url("https://fontsapi.zeoseven.com/481/main/result.css");
+@import url("https://fontsapi.zeoseven.com/245/main/result.css");
 
 body {
-    font-family: "TsangerShuYuanT W03";
+    font-family: "QiushuiShotai Bright";
     font-weight: normal;
     margin: 0;
     padding: 0;
